tests/function/local_mutual_recursion.rev
{
    fn isEven(n: int) -> bool {
        if (n == 0) { return true }
        return isOdd(n - 1) // error: undeclared variable 'isOdd'
    }

    fn isOdd(n: int) -> bool {
        if (n == 0) { return false }
        return isEven(n - 1)
    }

    isEven(4)
}